--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
+    "@types/unzipper": "^0.10.9",
     "@types/vscode": "^1.90.0",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
@@ -49,6 +50,7 @@
   "dependencies": {
     "@azure/identity": "^4.2.0",
     "@octokit/rest": "^20.1.1",
-    "openai": "^4.50.0"
+    "openai": "^4.50.0",
+    "unzipper": "^0.12.1"
   }
 }
