--- a/package.json
+++ b/package.json
@@ -14,15 +14,7 @@
   "contributes": {
     "commands": [
       {
-        "command": "l10n-participant.translate.example",
-        "title": "L10N Participant: Run example Azure OpenAI translation"
-      },
-      {
-        "command": "l10n-participant.translate.fetch",
-        "title": "L10N Participant: Fetch and save language packs to disk"
-      },
-      {
-        "command": "l10n-participant.translate.process",
+        "command": "l10n-participant.translate.create",
         "title": "L10N Participant: Create new language pack"
       },
       {
